Patch: Fix the bug when the editor is fullscreen, the suggestion box will not be displayed in right place. The reason is that display of all the dom nodes except the editor related doms will be set to none, so the position of the trigger mark can not be calculated, another resaon is that when the editor is fullscreen, its z-index will be set to larger than suggestion box, so we should increase the suggestion box in order to move it to the most top of the body

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/editors/autosuggest.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/editors/autosuggest.css
@@ -11,6 +11,7 @@ word-wrap:break-word;
 /* CSS container shadow */
 #suggestion_box_container {
    position:absolute;
+   z-index:2000;
 }
 #suggestion_box_container .container {
     position:relative;
